src/test/ui/issues/issue-77218-2.stderr
error[E0070]: invalid left-hand side of assignment
  --> $DIR/issue-77218-2.rs:5:19
   |
LL |     while Some(0) = value.get(0) {
   |                -  ^
   |                |
   |                cannot assign to this expression
   |
help: you might have meant to use pattern destructuring
   |
LL |     while let Some(0) = value.get(0) {
   |           ^^^

error[E0308]: mismatched types
  --> $DIR/issue-77218-2.rs:5:11
   |
LL |     while Some(0) = value.get(0) {
   |           ^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0070, E0308.
For more information about an error, try `rustc --explain E0070`.
